[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/body/liver.png" type="Texture" id=2]
[ext_resource path="res://scenes/Celinha.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Liver.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/BadMolecule.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Score.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PauseOrgan.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/pause.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="Liver" type="Node2D"]
pause_mode = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -69.0 ]
}
badMolecule = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511, 358 )
scale = Vector2( 0.161, 0.161 )
texture = ExtResource( 1 )

[node name="LiverRigidBody" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="LiverImage" type="Sprite" parent="LiverRigidBody"]
position = Vector2( 471.375, 332.875 )
scale = Vector2( 0.775901, 0.723105 )
texture = ExtResource( 2 )

[node name="LiverCollisionPolygon2D" type="CollisionPolygon2D" parent="LiverRigidBody"]
build_mode = 1
polygon = PoolVector2Array( 249, 131, 208, 186, 182, 231, 164, 291, 148, 368, 141, 436, 146, 499, 162, 535, 175, 546, 194, 553, 217, 552, 244, 541, 276, 523, 302, 502, 353, 458, 385, 436, 419, 424, 476, 407, 518, 395, 571, 386, 627, 363, 672, 345, 727, 318, 787, 279, 820, 249, 852, 212, 860, 177, 856, 150, 840, 130, 810, 116, 756, 118, 701, 116, 658, 115, 604, 110, 540, 99, 494, 92, 434, 88, 367, 91, 341, 93, 316, 99, 281, 112 )

[node name="Position2D" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 713, 150 )

[node name="Position2D2" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 216, 497 )

[node name="Position2D3" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 826, 165 )

[node name="Position2D4" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 186, 344 )

[node name="Position2D5" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 489, 384 )

[node name="Position2D6" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 306, 147 )

[node name="Position2D7" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 643, 334 )

[node name="Position2D8" type="Position2D" parent="LiverRigidBody/LiverCollisionPolygon2D"]
position = Vector2( 510, 128 )

[node name="Celinha" parent="." instance=ExtResource( 3 )]
position = Vector2( 645, 214 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 27.0
margin_top = 36.0
margin_right = 115.0
margin_bottom = 62.0
theme = SubResource( 3 )
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" parent="." instance=ExtResource( 7 )]
position = Vector2( 7.99998, -171 )
scale = Vector2( 1.2, 1.2 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 904.0
margin_top = 485.0
margin_right = 1428.0
margin_bottom = 1003.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PauseButton" to="CanvasLayer/Pause" method="_on_PauseButton_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
